--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,31 +27,31 @@ path="crates/redislog"
 version="0.1.2"
 
 [dependencies]
-async-trait = "0.1.51"
+async-trait = "0.1.52"
 base64 = "0.13.0"
 bitflags = "1.3.2"
 clap = "2.33.3"
-futures = "0.3.17"
-http = "0.2.5"
-hyper = { version = "0.14.15", features = ["server", "http1"] }
-hyper-rustls = "^0.22"
+futures = "0.3.19"
+http = "0.2.6"
+hyper = { version = "0.14.16", features = ["server", "http1"] }
+hyper-rustls = "0.23.0"
 lazy_static = "1.4.0"
-libunftp = "0.18.2"
+libunftp = "0.18.3"
 prometheus = { version = "0.13.0", features = ["process"] }
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = { version = "1.0.71" }
+serde = { version = "1.0.133", features = ["derive"] }
+serde_json = { version = "1.0.74" }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.7.0"
 slog-term = "2.8.0"
 thiserror = "1.0.30"
-tokio = { version = "1.14.0", features = ["full"] }
+tokio = { version = "1.15.0", features = ["full"] }
 unftp-sbe-fs = "0.2.0"
 unftp-sbe-gcs = { version = "0.2.0", optional = true }
 unftp-auth-rest = { version = "0.2.0", optional = true }
 unftp-auth-jsonfile = { version = "0.2.0", optional = true }
 
 # Purely to resolve conflicts
-tracing="0.1.28"
+tracing="0.1.29"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.0", optional = true }
