--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.13.0"
+version = "0.13.1"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -36,7 +36,7 @@ http = "0.2.6"
 hyper = { version = "0.14.16", features = ["server", "http1"] }
 hyper-rustls = "0.23.0"
 lazy_static = "1.4.0"
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="2a4522d27ba65ba6b1b968429a5bf0cb0b56d8ba" }
+libunftp = "0.18.4"
 prometheus = { version = "0.13.0", features = ["process"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = { version = "1.0.74" }
@@ -56,9 +56,6 @@ tracing="0.1.29"
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.0", optional = true }
 
-[patch.crates-io]
-
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="2a4522d27ba65ba6b1b968429a5bf0cb0b56d8ba" }
 
 [features]
 all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
