--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ async-trait = "0.1.52"
 base64 = "0.13.0"
 bitflags = "1.3.2"
 clap = { version = "3.1.7", features = ["derive", "env"] }
+console-subscriber = { version = "0.1.4", optional = true }
 futures = "0.3.19"
 http = "0.2.6"
 hyper = { version = "0.14.16", features = ["server", "http1"] }
@@ -58,17 +59,17 @@ unftp-auth-pam = { version = "0.2.0", optional = true }
 
 
 [features]
-all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
+default = ["rest_auth", "cloud_storage", "jsonfile_auth"]
+all_extentions = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
 cloud_storage = ["unftp-sbe-gcs"]
 jsonfile_auth = ["unftp-auth-jsonfile"]
 pam_auth = ["unftp-auth-pam"]
 rest_auth = ["unftp-auth-rest"]
+tokio_console = ["console-subscriber", "tokio/tracing"]
 
-# build everything by default to make sure build works
-default = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 
 # With this we link dynamically to libc and pam
-gnu = ["all"]
+gnu = ["all_extentions"]
 
 # All features able to link statically
 musl = ["rest_auth", "cloud_storage", "jsonfile_auth"]
@@ -91,7 +92,7 @@ codegen-units = 1
 arch = ["x86_64"]
 
 [package.metadata.deb]
-features = ["all"]
+features = ["all_extentions"]
 section = "net"
 assets = [
     ["target/x86_64-unknown-linux-gnu/release/unftp", "usr/bin/", "755"],
