--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,29 +30,29 @@ version="0.1.2"
 async-trait = "0.1.56"
 base64 = "0.13.0"
 bitflags = "1.3.2"
-clap = { version = "3.1.7", features = ["derive", "env"] }
-console-subscriber = { version = "0.1.4", optional = true }
-futures = "0.3.19"
-http = "0.2.6"
-hyper = { version = "0.14.16", features = ["server", "http1"] }
+clap = { version = "3.2.6", features = ["derive", "env"] }
+console-subscriber = { version = "0.1.6", optional = true }
+futures = "0.3.21"
+http = "0.2.8"
+hyper = { version = "0.14.19", features = ["server", "http1"] }
 hyper-rustls = "0.23.0"
 lazy_static = "1.4.0"
 libunftp = "0.18.4"
-prometheus = { version = "0.13.0", features = ["process"] }
-serde = { version = "1.0.133", features = ["derive"] }
-serde_json = { version = "1.0.74" }
+prometheus = { version = "0.13.1", features = ["process"] }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.7.0"
-slog-term = "2.8.0"
-thiserror = "1.0.30"
-tokio = { version = "1.15.0", features = ["full"] }
+slog-term = "2.9.0"
+thiserror = "1.0.31"
+tokio = { version = "1.19.2", features = ["full"] }
 unftp-sbe-fs = "0.2.0"
 unftp-sbe-gcs = { version = "0.2.0", optional = true }
 unftp-auth-rest = { version = "0.2.0", optional = true }
 unftp-auth-jsonfile = { version = "0.2.0", optional = true }
 
 # Purely to resolve conflicts
-tracing="0.1.29"
+tracing= "0.1.35"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.0", optional = true }
@@ -78,10 +78,10 @@ musl = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 docker = ["musl"]
 
 [dev-dependencies]
-pretty_assertions = "1.0.0"
+pretty_assertions = "1.2.1"
 
 [build-dependencies]
-built = "0.3"
+built = { version = "0.5.1", features = ["git2", "chrono"] }
 
 [profile.release]
 debug = false
