--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_in
 slog-async = "2.7.0"
 slog-term = "2.9.0"
 thiserror = "1.0.31"
-tokio = { version = "1.20.1", features = ["full"] }
+tokio = { version = "1.20.1", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.2.1"
 unftp-sbe-gcs = { version = "0.2.1", optional = true }
 unftp-auth-rest = { version = "0.2.1", optional = true }
