--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ base64 = "0.13.1"
 bitflags = "1.3.2"
 clap = { version = "3.2.23", features = ["derive", "env"] }
 console-subscriber = { version = "0.1.8", optional = true }
+flate2 = "1.0"
 futures = "0.3.25"
 http = "0.2.8"
 hyper = { version = "0.14.23", features = ["server", "http1"] }
