--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,7 +40,7 @@ jobs:
         id: get_latest_tag
         run: |
           tag=$(git describe --tags)
-          echo "::set-output name=version::$tag"
+          echo "version=$tag" >> $GITHUB_OUTPUT
 
   format:
     name: Check Formatting
@@ -111,8 +111,10 @@ jobs:
       target: x86_64-unknown-linux-gnu
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
-      - name: Checkout sources
+      - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Otherwise the code that retrieves the git version doesn't work
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -140,7 +142,10 @@ jobs:
       target: x86_64-unknown-linux-musl
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Otherwise the code that retrieves the git version doesn't work
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -168,7 +173,10 @@ jobs:
       trget: x86_64-pc-windows-msvc
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Otherwise the code that retrieves the git version doesn't work
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -194,7 +202,10 @@ jobs:
       target: x86_64-apple-darwin
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Otherwise the code that retrieves the git version doesn't work
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -220,7 +231,10 @@ jobs:
       target: aarch64-apple-darwin
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Otherwise the code that retrieves the git version doesn't work
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -291,3 +305,83 @@ jobs:
           asset_path: ${{ env.file_dir }}/${{ env.file_name }}.md5
           asset_name: ${{ env.file_name }}.md5
           asset_content_type: text/plain
+
+  build-docker-images:
+    if: ${{ github.event_name == 'release' }}  # Testing if: ${{ github.ref == 'refs/heads/hannes/docker-actions' }}
+    runs-on: ubuntu-latest
+    needs:
+      - build-linux-musl
+      - get_version
+    env:
+      BUILD_VERSION: ${{ needs.get_version.outputs.version }}
+    name: Build docker images
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Download linux musl
+        uses: actions/download-artifact@v2
+        with:
+          name: unftp_x86_64-unknown-linux-musl
+          path: ./x86_64-unknown-linux-musl
+
+      - name: Change file permission
+        run: chmod +x ./x86_64-unknown-linux-musl/unftp_x86_64-unknown-linux-musl
+
+      - name: Build Docker image
+        run: docker build -t bolcom/unftp:${{ env.BUILD_VERSION }}-scratch -f packaging/docker/scratch.Dockerfile.ci . 
+
+      - name: Save Docker image as tar
+        run: docker save -o docker-image-scratch.tar bolcom/unftp:${{ env.BUILD_VERSION }}-scratch
+
+      - name: Upload scratch tar image
+        uses: actions/upload-artifact@v2
+        with:
+          name: docker-image-scratch
+          path: docker-image-scratch.tar
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push scratch image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./packaging/docker/scratch.Dockerfile.ci
+          push: true
+          tags: bolcom/unftp:${{ env.BUILD_VERSION }}-scratch
+
+      - name: Build and push alpine image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./packaging/docker/alpine.Dockerfile.ci
+          push: true
+          tags: bolcom/unftp:${{ env.BUILD_VERSION }}-alpine
+
+      - name: Build and push alpine-istio image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./packaging/docker/alpine-istio.Dockerfile.ci
+          push: true
+          tags: bolcom/unftp:${{ env.BUILD_VERSION }}-alpine-istio
+
+      - name: Build and push alpine-debug image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./packaging/docker/alpine-debug.Dockerfile.ci
+          push: true
+          tags: bolcom/unftp:${{ env.BUILD_VERSION }}-alpine-debug
+
+      - name: Build and push Scratch image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./packaging/docker/alpine-istio-debug.Dockerfile.ci
+          push: true
+          tags: bolcom/unftp:${{ env.BUILD_VERSION }}-alpine-istio-debug
