--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ unftp-sbe-fs = "0.2.2"
 unftp-sbe-gcs = { version = "0.2.3", optional = true }
 unftp-auth-rest = { version = "0.2.2", optional = true }
 unftp-auth-jsonfile = { version = "0.3.1", optional = true }
+unftp-sbe-rooter = "0.1.0"
 
 # Purely to resolve conflicts
 tracing= "0.1.37"
