--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,6 @@ version="0.1.2"
 [dependencies]
 async-trait = "0.1.68"
 base64 = "0.13.1"
-bitflags = "1.3.2"
 clap = { version = "3.2.25", features = ["derive", "env"] }
 console-subscriber = { version = "0.1.9", optional = true }
 flate2 = "1.0.26"
@@ -52,6 +51,7 @@ unftp-sbe-gcs = { version = "0.2.3", optional = true }
 unftp-auth-rest = { version = "0.2.2", optional = true }
 unftp-auth-jsonfile = { version = "0.3.1", optional = true }
 unftp-sbe-rooter = "0.1.0"
+unftp-sbe-restrict = "0.1.0"
 
 # Purely to resolve conflicts
 tracing= "0.1.37"
