--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -173,6 +173,7 @@ jobs:
       trget: x86_64-pc-windows-msvc
       BUILD_VERSION: ${{ needs.get_version.outputs.version }}
     steps:
+      - uses: ilammy/setup-nasm@v1
       - name: Checkout code
         uses: actions/checkout@v3
         with:
